# EssentialsCode

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  fixer.rs  main.rs  parser.rs  scanner.rs  ui.rs
